# plainx-sentry

./: README.md  pyproject.toml
boltx/sentry/: __init__.py  config.py  default_settings.py  jinja.py  middleware.py
plainx/sentry/: CHANGELOG.md  config.py  middleware.py  templates.py
plainx/sentry/templates/sentry/: js.html
scripts/: test
tests/: settings.py  test_sentry.py  urls.py
