[tool.poetry]
name = "boltx-sentry"
packages = [
    { include = "boltx" },
]

version = "0.1.0"
description = ""
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
sentry-sdk = "^1.8.0"

[tool.poetry.dev-dependencies]
bolt = {git = "https://github.com/dropseed/bolt", branch = "main"}
bolt-pytest = {git = "https://github.com/dropseed/bolt", subdirectory = "bolt-pytest", branch = "main"}
bolt-code = {git = "https://github.com/dropseed/bolt", subdirectory = "bolt-code", branch = "main"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
