[project]
name = "plainx-sentry"
version = "0.12.0"
description = ""
readme = "README.md"
authors = [
    { name = "Dave Gaeddert", email = "dave.gaeddert@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "plain-auth>=0.16.0",
    "plain-sessions<1.0.0",
    "sentry-sdk[opentelemetry]>=2.24.0",
]

[dependency-groups]
dev = [
    "plain<1.0.0",
    "plain-code<1.0.0",
    "plain-pytest<1.0.0",
    "plainx-dev>=0.1.0",
    "psycopg[binary]>=3.3.3",
]


[tool.hatch.build.targets.wheel]
packages = ["plainx"]


[tool.plain.code.oxc]
enabled = false
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
